test/ddc-spec/error/01-ErrorExp/42-CaseNonExhaustive/Main.ds

module Main where

data Foo where
        Bar : Foo
        Baz : Foo

foo (x: Foo)
 = case x of
        Bar     -> 5

